test: restructure `SelectTemplateTest` with nested test classes and enhanced entity-selection assertions